<?xml version="1.0"?>
<package format="2">
  <name>tiago_myrmex</name>
  <version>0.0.1</version>
  <description>Myrmex Sensor tools for TIAGo.</description>

  <maintainer email="luca.lach@pal-robotics.com">Luca Lach</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>agni_serial_protocol</build_depend>
  <exec_depend>agni_serial_protocol</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
